# downloader_tg_py

./: .gitignore  dockerfile  main.py  pyproject.toml  pyrightconfig.json  readme.md  requirements.txt
.github/workflows/: docker-publish.yml  update-packages.yml
autotests/: run.py  test_youtube_download.py  youtube_download.py
bot/: __main__.py
bot/config/: config.py  logging_config.py
bot/core/: classes.py  common.py  handlers.py  helpers.py  init.py  tg.py
bot/db/: cache.py  cache_qualitys.py  channels.py  db.py  last_video.py  models.py  options.py
bot/funcs/: animations.py  commands.py  media_msg.py  options.py  video_auto.py  video_msg.py  video_watchdog.py  watchdog.py  watchdog_msg.py  youtube.py
bot/youtube/: channel_scrap.py  downloader.py  get_info.py  hooks.py  sponsorblock.py
config/: config.py  logging_config.py
core/: base.py  tg.py
db/: cache.py  channel.py  db.py  models.py  notify.py  option.py
youtube/: download.py  get_id.py  hooks.py  scrap.py  sponsorblock.py  tg_func.py
youtube/tg/: audio.py  base.py  channels.py  notify_channels.py  options.py  video.py
